fixed links and section spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,8 +42,7 @@ h1, h2 {
 }
 
 .section {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    padding-top: 4rem;
 }
 
 h2 {
